--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@
 #--------------------------------------------------------------------
 
 	database.default.hostname = localhost
-	database.default.database = arkcrmv1
+	database.default.database = gwc
 	database.default.username = root
 	database.default.password = 
 # database.default.DBDriver = MySQLi
