[2024-06-27] GWC-DEV Setup

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@
 # APP
 #--------------------------------------------------------------------
 
-	app.baseURL = 'http://localhost/gwc/'
+	app.baseURL = 'https://dev.goldwatercap.net/'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
@@ -40,9 +40,9 @@
 #--------------------------------------------------------------------
 
 	database.default.hostname = localhost
-	database.default.database = gwc
-	database.default.username = root
-	database.default.password = 
+	database.default.database = gwc_app_dev
+	database.default.username = gwc_app
+	database.default.password = As@d1hQIkV0iTMtJhP3+Vtb2T%:fBnEy
 # database.default.DBDriver = MySQLi
 # database.default.DBPrefix =
 	database.default.port = 3306
